<resources>
    <string name="app_name">appCV</string>
    <string name="choose_the_time">Choose the time</string>
    <string name="event_day">Event day</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="choose_the_date">Choose the date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="description">Description</string>
    <string name="add_the_event">Add event</string>
    <string name="back">BACK</string>
</resources>