<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:paddingTop="30dp"
    tools:context=".ui.AddEventActivity">

    <EditText
        android:id="@+id/title_ED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/title"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/date"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/date_ET"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:focusableInTouchMode="false"
            android:gravity="end"
            android:hint="@string/choose_the_date"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/from"
            android:textSize="30sp" />


        <EditText
            android:id="@+id/time_from_ET"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:focusableInTouchMode="false"
            android:gravity="end"
            android:hint="@string/choose_the_time"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/to"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/time_to_ET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:focusableInTouchMode="false"
            android:gravity="end"
            android:hint="@string/choose_the_time"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/description_ED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/description"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"
            android:gravity="center"
            android:text="@string/back"
            app:icon="@drawable/ic_back"
            app:rippleColor="@color/teal_200" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/commit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:gravity="center"
            android:text="@string/add_the_event"
            app:icon="@drawable/ic_add"
            app:rippleColor="@color/teal_200" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>